<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">易视频</string>
    <string name="http_timeout">网络超时,请重试</string>
    <string name="http_connect_error">网络中断,请检查您的网络状态</string>
    <string name="http_error">网络错误:</string>
    <string name="http_nodata">无数据</string>
    <string name="http_exception_error">ERROR</string>
    <string name="http_parse_exception">服务暂时不可用</string>
    <string name="http_connect_exception">服务暂时不可用</string>
    <string name="http_unknown_error">服务暂时不可用</string>
    <string name="network_error">网络连接异常\n\n正在重新连接(%1$s)...</string>
    <string name="network_error2">对不起,无法连接到网络,您可以选择</string>
    <string name="http_errorcode_400">错误请求</string>
    <string name="http_errorcode_401">请求授权失败</string>
    <string name="http_errorcode_403">请求的资源不允许访问</string>
    <string name="http_errorcode_404">服务器找不到你请求的资源</string>
    <string name="http_errorcode_408">请求超时</string>
    <string name="http_errorcode_500">服务器产生内部错误</string>
    <string name="http_errorcode_502">服务器暂时不可用</string>
    <string name="http_errorcode_503">服务器服务暂时不可用</string>
    <string name="http_errorcode_504">网关超时</string>
    <string name="socket_errorcode_700">服务器返回错误</string>
    <string name="socket_errorcode_701">服务器返回解析错误</string>
    <string name="socket_errorcode_702">服务器连接失败</string>
    <string name="socket_errorcode_703">Socket超时</string>
    <string name="details_description_info_str">%1$s|%2$s</string>
    <string name="details_source_data_dot">● </string>
    <string name="details_4k_warnning">4K节目，该机顶盒不支持，可拨打10086进行机顶盒更换</string>
    <string name="details_4k_warnning_new">4K节目，该机顶盒不支持</string>
    <string name="notice_free_trial_play">您可以免费观看%1$s，观看完整版请点击</string>
    <string name="notice_free_trial_play_new">试看%1$s，因版权方要求，观看完整版请按</string>
    <string name="notice_free_trial_play_pause_new">%1$s试看已结束，因版权方要求，观看完整版请按</string>
    <string name="notice_free_trial_play_alacarte">您的VIP点播权限还有%1$s片，本片您可免费观看%1$s，观看完整版请点击</string>
    <string name="notice_sure_back_to_liveTv">确认返回直播吗？</string>
    <string name="notice_no_orderable_product">无可订购产品!</string>
    <string name="notice_media_auth_failed">媒资鉴权失败！</string>
    <string name="notice_not_allowed_free_trial_forNow">本片暂不支持试看</string>
    <string name="notice_location_is_limited">地理受限！</string>
    <string name="notice_play_url_is_empty">播放地址为空！</string>
    <string name="authentic_fail">没有权限</string>
    <string name="code_rate_auto">自动</string>
    <string name="player_sd">标清</string>
    <string name="player_hd">高清</string>
    <string name="player_sc">超清</string>
    <string name="backslash"> / </string>
    <string name="minus">-</string>
    <string name="player_can_not_get_play_url">获取播放地址失败</string>
    <string name="enter_and_player">\"确认键\"</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="note">提示</string>
    <string name="message_network_wifi">WIFI已连接</string>
    <string name="message_network_wifi_to_3g">正在使用手机流量</string>
    <string name="message_network_3g">当前正在使用 3G/4G 网络.</string>
    <string name="message_network">正在使用手机流量，暂停下载任务</string>
    <string name="message_network_disconnect">网络异常，请检查网络设置</string>
    <string name="loading">正在加载...</string>
    <string name="tips_delete_profile_pin">删除用户需要输入PIN码.</string>
    <string name="login">登录</string>
    <string name="login_fail">服务暂时不可用</string>
    <string name="setting">设置</string>
    <string name="unknow">未知</string>
    <string name="my_used_space">已用空间:%1$sGB / %2$sGB</string>
    <string name="my_app_title">我的应用（%1$s）</string>
    <string name="enter_password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="gain_verification_code">获取验证码</string>
    <string name="again_get">s后重新获取</string>
    <string name="password_error">密码错误</string>
    <string name="no_net_work">网络异常，请检查网络设置</string>
    <string name="upgrade_force_hint">点击确定更新应用</string>
    <string name="upgrade_check_sdcard">请确定您的手机有sd卡.</string>
    <string name="upgrade_download_fail">下载失败，点击重新下载</string>
    <string name="upgrade_download_succeed">下载成功，点击安装</string>
    <string name="app_update_tip">应用更新提示</string>
    <string name="app_edition">版本</string>
    <string name="update_now_btn">立即更新</string>
    <string name="later_to_say_again_btn">稍后再说</string>
    <string name="add_device_fail">设备添加失败</string>
    <string name="remove_device_failure">设备解绑失败</string>
    <string name="query_device_failure">设备查询失败</string>
    <string name="dialog_unbind">解绑</string>
    <string name="dialog_hind">您确定要解绑此设备吗?</string>
    <string name="session_timeout_tip">服务暂不可用</string>
    <string name="device_admin_disable_warning">关闭服务之后，Heads-up 某些功能可能不会正常工作。</string>
    <string name="device_admin_enable_explanation">启用设备管理将允许Heads-up关闭你的屏幕。当显示弹窗后屏幕不关闭或口袋模式工作不正常请启用设备管理。</string>
    <string name="caas_login_error">账号登录异常,请重新登录</string>
    <string name="error_code_nomal">系统异常,请重试</string>
    <string name="live_tv_collection">收藏</string>
    <string name="profile_user_name">用户名</string>
    <string name="profile_pwd_empty_tips">密码不能为空</string>
    <string name="dialog_lock_title">请输入密码解锁</string>
    <string name="setting_device_name">设备名称</string>
    <string name="vip_sub_remanentCredit0">余额不足,无法订购</string>
    <string name="terminal_match_otherletters">输入的%1$s只支持 "%2$s" 中的一个或多个特殊字符</string>
    <string name="terminal_match_no_otherletters">输入的%1$s不能包含特殊字符</string>
    <string name="terminal_pwd_check_limt">密码最小长度为%1$s位</string>
    <string name="terminal_pwd_uppercaseletters">输入的密码必须含有大写字母</string>
    <string name="terminal_pwd_lowercaseletters">输入的密码必须含有小写字母</string>
    <string name="terminal_pwd_need_numbers">输入的密码中必须含有数字</string>
    <string name="terminal_pwd_no_need_space">密码不支持空格</string>
    <string name="terminal_name_check_limt">用户名最小长度为%1$s位</string>
    <string name="terminal_name_check_maxlimt">用户名最大长度为%1$s位</string>
    <string name="terminal_name_uppercaseletters">输入的用户名不能含有大写字母</string>
    <string name="terminal_name_lowercaseletters">输入的用户名不能含有小写字母</string>
    <string name="terminal_name_need_numbers">输入的用户名中不能含有数字</string>
    <string name="terminal_name_no_need_space">用户名不支持空格</string>
    <string name="terminal_devicename_check_limt">设备名称最小长度为%1$s位</string>
    <string name="terminal_devicename_check_maxlimt">设备名称最大长度为%1$s位</string>
    <string name="terminal_devicename_uppercaseletters">输入的设备名称不能含有大写字母</string>
    <string name="terminal_devicename_lowercaseletters">输入的设备名称不能含有小写字母</string>
    <string name="terminal_devicename_need_numbers">输入的设备名称不能含有数字</string>
    <string name="terminal_devicename_no_need_space">设备名称不支持空格</string>
    <string name="main_tab_name_select">精选</string>
    <string name="et_search_hint_text">输入片名、人名的首字母或全拼</string>
    <string name="search_tips">1.支持 “汉字拼音首字母” 搜索\n  &#160;  如搜索电影：《英雄》，输入首字母：YX\n\n2.支持“演员”和“中文热词”搜索\n
      &#160;&#160;如搜索演员：邓超，输入首字母：DC\n&#160;&#160;&#160;如输入：ZRC，联想热词：真人秀</string>
    <string name="search_association">你是不是在找</string>
    <string name="keyboard_symbol">#+-</string>
    <string name="keyboard_symbol_abc">abc</string>
    <string name="search_hot">最热推荐</string>
    <string name="vod_search_ranking">电影搜索排行</string>
    <string name="search_result_num">搜索结果(%1$s)</string>
    <string name="search_result_type_all">全部</string>
    <string name="search_result_type_film">电影</string>
    <string name="search_result_type_tvPlay">电视剧</string>
    <string name="search_result_type_tvActor">演员</string>
    <string name="search_result_type_Variety">综艺</string>
    <string name="search_result_type_Live">直播节目</string>
    <string name="search_result_type_miplay">咪咕爱看</string>
    <string name="search_result_page_index"> <![CDATA[<font color="#c5663e">%1$s</font>/<font color="#c5663e">%1$s</font>  ]]> </string>
    <string name="search_everyone_search">大家都在搜</string>
    <string name="search_actor_child">动画大咖</string>
    <string name="search_actor">影人</string>
    <string name="search_hot_video">热搜视频</string>
    <string name="my_userinfo_bussness_account">业务账号：</string>
    <string name="launcher_my_user_info">用户信息</string>
    <string name="launcher_my_user_name">用户名：</string>
    <string name="launcher_my_product_end">产品到期时间：</string>
    <string name="launcher_my_device_version">设备型号：</string>
    <string name="launcher_my_stbId">STBID：</string>
    <string name="launcher_my_function">常用功能</string>
    <string name="launcher_my_order">订购记录</string>
    <string name="launcher_my_reserve">我的预约</string>
    <string name="launcher_my_base_info">基本信息</string>
    <string name="launcher_my_message">消息通知</string>
    <string name="launcher_my_bind">绑定账户</string>
    <string name="launcher_my_help">帮助</string>
    <string name="launcher_my_play_history">播放历史</string>
    <string name="launcher_my_collect">我的收藏</string>
    <string name="launcher_my_more_history">更多历史</string>
    <string name="mytv_movie_title">我的影片</string>
    <string name="mytv_history_tv">宽带电视</string>
    <string name="mytv_history_phone">咪咕爱看</string>
    <string name="mytv_history_delete">删除</string>
    <string name="mytv_history_deleteAll">清空</string>
    <string name="mytv_history_list_today">今天</string>
    <string name="mytv_history_list_yesterday">昨天</string>
    <string name="mytv_history_list_thisweek">一周内</string>
    <string name="mytv_history_list_thismouth">更早</string>
    <string name="mytv_history_list_less_1min">观看不足一分钟</string>
    <string name="mytv_history_list_min">分钟</string>
    <string name="mytv_movie_collection">收藏</string>
    <string name="has_no_film">还没有收藏的影片。\n点击下面的按钮去添加感兴趣的内容</string>
    <string name="add">添加</string>
    <string name="mytv_all_choose">全选</string>
    <string name="mytv_film_type">电影</string>
    <string name="mytv_tv_num">共%1$s集</string>
    <string name="dis_all_choose">取消全选</string>
    <string name="mytv_order_type">类型:</string>
    <string name="mytv_order_director">导演:</string>
    <string name="mytv_order_actor">演员:</string>
    <string name="mytv_order_level">级别:</string>
    <string name="mytv_order_unknown">未知</string>
    <string name="clear_all">清除全部</string>
    <string name="mytv_dialog_title">确定</string>
    <string name="mytv_dialog_content">确实要删除所选内容吗?</string>
    <string name="mytv_dialog_content_deleteAll">确实要删除所有内容吗?</string>
    <string name="mytv_dialog_sure">确定</string>
    <string name="mytv_dialog_cancel">取消</string>
    <string name="ordered_list_total_count"> / %1$s</string>
    <string name="order_list_item_price">%1$s</string>
    <string name="ordered_list_title_filter">筛选</string>
    <string name="ordered_list_title">我的订购</string>
    <string name="order_list_tv_indate">有效期：%1$s</string>
    <string name="order_list_tv_detail">详情：%1$s</string>
    <string name="instructions_1">点播类节目的更新时间</string>
    <string name="problem_detail_3">操作引导：
        a.长按遥控器电视机按键区的“电源键”按键约 5 秒钟，直至遥控器红色指示灯变为长亮状态，此时进入学习状态。
        b.按一下要学习的按键，红色指示灯闪烁，此时处于学习接收状态。c.手持被学习遥控器，对准机顶盒遥控器，距离大约 3-5mm，按下被学习的按键。d.学习成功后红色指示灯快速闪烁三下后继续保持长亮，可以再次选择其他学习按键进行学习。e.如学习失败则红灯闪烁 5 次，返回学习状态，重复步骤 2-4。f.学习完毕后，按电视按键区以外的任意其他按键退出学习状态，红色指示灯熄灭。若未解决：派单装维。</string>
    <string name="account_bind_comp">打开咪咕爱看APP，点击首页右上角机顶盒标志，扫描此二维码绑定手机号和盒子账号</string>
    <string name="account_bind_desc">绑定手机号后，立即体验手机遥控器、甩屏播放、播放记录断点续播等精彩多屏互动功能</string>
    <string name="account_bind">绑定账户</string>
    <string name="account_name">账户:139****5165</string>
    <string name="account_bind_count">1个账号已绑定</string>
    <string name="cancel_bind">解除绑定</string>
    <string name="operation_tips">浏览操作提示</string>
    <string name="my_order_order_list_title">订购记录</string>
    <string name="my_order_header_type">类型</string>
    <string name="my_order_header_name">名称</string>
    <string name="my_order_header_price">资费</string>
    <string name="my_order_header_ordertime">订购时间</string>
    <string name="my_order_header_unsubscribetime">失效时间</string>
    <string name="my_order_filter_all_date">全部日期&#160;&#160;▼</string>
</resources>