<?xml version="1.0" encoding="utf-8"?>
<androidx.leanback.widget.BrowseFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_order_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="@dimen/margin_950"
            android:layout_height="match_parent"
            android:focusable="false"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            >

            <RelativeLayout
                android:id="@+id/rl_my_order_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_my_order_current_label"
                    android:layout_width="140dp"
                    android:layout_height="@dimen/margin_36"
                    android:gravity="center_vertical"
                    android:text="@string/my_order_order_list_title"
                    android:textColor="@color/c21_color"
                    android:textSize="@dimen/movie_list_item_name_size" />

                <TextView
                    android:id="@+id/tv_my_order_filter"
                    android:layout_width="@dimen/my_order_filter_width"
                    android:layout_height="@dimen/margin_48"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_25"
                    android:background="@drawable/my_order_filter_bg_selector"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/my_order_filter_all_date"
                    android:textColor="@drawable/activity_launcher_text_selector"
                    android:textSize="@dimen/order_center_userinfo_textsize" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_42"
                android:layout_marginTop="@dimen/margin_32"
                android:background="@color/white_transparent_50"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/my_order_header_type_width"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/my_order_header_type"
                    android:textColor="@color/c21_color"
                    android:textSize="@dimen/my_order_formheader_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/my_order_header_name_width"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order_header_name"
                    android:textColor="@color/c21_color"
                    android:textSize="@dimen/my_order_formheader_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/my_order_header_price_width"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_14"
                    android:text="@string/my_order_header_price"
                    android:textColor="@color/c21_color"
                    android:textSize="@dimen/my_order_formheader_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/my_order_header_ordertime_width"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order_header_ordertime"
                    android:textColor="@color/c21_color"
                    android:textSize="@dimen/my_order_formheader_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="@dimen/my_order_header_expiretime_container_width"
                    android:layout_height="wrap_content"
                    android:text="@string/my_order_header_unsubscribetime"
                    android:textColor="@color/c21_color"
                    android:textSize="@dimen/my_order_formheader_textSize"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.leanback.widget.VerticalGridView
                android:id="@+id/order_center_my_order_list"
                android:layout_width="@dimen/margin_950"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_10"
                android:focusable="false"
                android:paddingBottom="@dimen/margin_32">

            </androidx.leanback.widget.VerticalGridView>
        </LinearLayout>

    </RelativeLayout>


</androidx.leanback.widget.BrowseFrameLayout>